--- a/HW1/pie.html
+++ b/HW1/pie.html
@@ -87,16 +87,16 @@
 		<div>
 		<h1>LINKS</h1>		
 		<a class="popup" href="http://www.google.com/search?q=lemon+meringue+pie+recipe&amp;start=10">Search for other lemon meringue pie recipes</a> <br />
-		<a class="popup" href="http://mumstudents.org/~984641/">Home</a>		
+		<a class="popup" href="https://roechever.github.io/">Home</a>		
 		<pre>
 Copyright &copy; 2012 Granny's Pies
     A Granny's Pies Production     
            All rights reserved
 	    </pre>		
-		<a href="http://validator.w3.org/check/referer">
+		<a href="https://validator.w3.org/check/referer">
 		<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
 		</a>
-		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a>	
+		<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a>	
 		</div>
 
 		
