--- a/Lab1/aboutme.html
+++ b/Lab1/aboutme.html
@@ -22,6 +22,13 @@
 			<li>ASD</li>
 			<li>ALGORITHMS</li>
 			<li>WAP</li>
+			<li>DBMS</li>
+			<li>BDA</li>
+			<li>SEMINAR PROJECT MANAGER</li>
+			<li>CPT JOB</li>
+			<li>WAA</li>
+			<li>SWE</li>
+			<li>SWA</li>
 		</ul>
 		</div>
 		
@@ -66,14 +73,13 @@
 		
 		
 		<div>
-		<a class="popup" href="http://mumstudents.org/~984641/">Home</a>	
-		<a href="http://validator.w3.org/check/referer">
+		<a class="popup" href="https://roechever.github.io/">Home</a>	
+		<a href="https://validator.w3.org/check/referer">
 		<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
 		</a>
 		
-		<!--
-        <a href="http://mumstudents.org/jshint/referer.php"><img src="http://mumstudents.org/jshint/jshint-small.png" alt="Valid JS"/></a>  -->  
-		<a href="http://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a>
+		
+		<a href="https://jigsaw.w3.org/css-validator/check/referer"><img src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a>
 		</div>
 		
 	</body>
