--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 		<h1>Rodrigo Echeverry Granada</h1>
 		<ul>
 			<li><a class="popup" href="https://roechever.github.io/index.html">W1D1 This homepage</a> </li>
-			<li><a class="popup" href="https://roechever.github.io/Lab1/aboutme.html">W1D1 About Me</a> </li>
+			<li><a class="popup" href="https://roechever.github.io/Lab1/aboutme.html">W1D1_D2 About Me</a> </li>
 			<li><a class="popup" href="https://roechever.github.io/HW1/pie.html">W1D2 Recipe</a> </li>
-			<!--<li><a class="popup" href="http://mumstudents.org/~984641/HW2/tmnt.html">W1D4 Movie Review</a> </li>
-			<li><a class="popup" href="http://mumstudents.org/~984641/music/music.php">W1D5 Music</a> </li>
+			<li><a class="popup" href="https://roechever.github.io/Lab2/Journal.html">W1D3 Journal</a> </li>
+			<li><a class="popup" href="https://roechever.github.io/HW2/tmnt.html">W1D3 Movie Review</a> </li>
+			<li><a class="popup" href="https://roechever.github.io/BuggyJS_TipCalc/buggy.html">W1D5 Buggy - Tip Calculator</a> </li>
+			<!--<li><a class="popup" href="http://mumstudents.org/~984641/music/music.php">W1D5 Music</a> </li>
 			<li><a class="popup" href="http://mumstudents.org/~984641/HW3/movie.php?film=princessbride">W1D6 Movie Review PHP</a> </li>
 			<li><a class="popup" href="http://mumstudents.org/~984641/HW4/index.php">W2D1 NerdLuv</a> </li>
 			<li><a class="popup" href="http://mumstudents.org/~984641/HW5/index.php">W2D2 NerdLuv with DB</a> </li>
@@ -28,7 +30,7 @@
 			<li><a class="popup" href="http://mumstudents.org/~984641/Lab11/Lab11-1.html">W4D4 Parser Jason Ajax</a> </li>
 			<li><a class="popup" href="http://mumstudents.org/~984641/FinalProject/index.php">Final Project</a> </li>-->
 		</ul>
-		<em>Hi this is chgange</em>
+		
 		<a href="https://validator.w3.org/check/referer">
 		<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
 		</a>
