--- a/BuggyJS_TipCalc/tip.html
+++ b/BuggyJS_TipCalc/tip.html
@@ -4,7 +4,7 @@
 	CSE 190M, Summer 2012
 	This file is a tip calculator page using JavaScript.
 	-->
-<script>
+<!--<script>
 /*function calcTip() {
 	//var subtotalElem = 
 	//var tipElem = 
@@ -15,7 +15,7 @@
 	totalElem.innerHTML = '$' + total;
 }
 */
-</script>
+</script>-->
 	<head>
 		<title>Tip Calculator</title>
 		<link href="tip.css" type="text/css" rel="stylesheet" />
