lab 6 decoration js  - hw8 ascii js animations

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<li><a class="popup" href="https://roechever.github.io/Lab2/Journal.html">W1D3 Journal</a> </li>
 			<li><a class="popup" href="https://roechever.github.io/HW2/tmnt.html">W1D3 Movie Review</a> </li>
 			<li><a class="popup" href="https://roechever.github.io/BuggyJS_TipCalc/buggy.html">W1D5 Buggy - Tip Calculator</a> </li>
-			<li><a class="popup" href="https://roechever.github.io/~984641/Lab6/decoratemytext.html">W1D6 Decorator</a> </li>
+			<li><a class="popup" href="https://roechever.github.io/Lab6/decoratemytext.html">W1D6 Decorator</a> </li>
 			<li><a class="popup" href="https://roechever.github.io/HW8/ascii.html">W1D6 Ascii Animations</a> </li>
 			<!--<li><a class="popup" href="http://mumstudents.org/~984641/music/music.php">W1D5 Music</a> </li>
 			<li><a class="popup" href="http://mumstudents.org/~984641/HW3/movie.php?film=princessbride">W1D6 Movie Review PHP</a> </li>
