lab7 bankaccount- closeure topiscs

--- a/index.html
+++ b/index.html
@@ -22,15 +22,8 @@
 			<li><a class="popup" href="https://roechever.github.io/BuggyJS_TipCalc/buggy.html">W1D5 Buggy - Tip Calculator</a> </li>
 			<li><a class="popup" href="https://roechever.github.io/Lab6/decoratemytext.html">W1D6 Decorator</a> </li>
 			<li><a class="popup" href="https://roechever.github.io/HW8/ascii.html">W1D6 Ascii Animations</a> </li>
-			<!--<li><a class="popup" href="http://mumstudents.org/~984641/music/music.php">W1D5 Music</a> </li>
-			<li><a class="popup" href="http://mumstudents.org/~984641/HW3/movie.php?film=princessbride">W1D6 Movie Review PHP</a> </li>
-			<li><a class="popup" href="http://mumstudents.org/~984641/HW4/index.php">W2D1 NerdLuv</a> </li>
-			<li><a class="popup" href="http://mumstudents.org/~984641/HW5/index.php">W2D2 NerdLuv with DB</a> </li>
-			<li><a class="popup" href="http://mumstudents.org/~984641/HW6/index.php">W2D2 NerdLuv Sessions</a> </li>
-			<li><a class="popup" href="http://mumstudents.org/~984641/HW8/ascii.html">W2D2 Ascii Animations</a> </li>
-			<li><a class="popup" href="http://mumstudents.org/~984641/HW7/Maze!.html">W2D4 Maze</a> </li>
-			<li><a class="popup" href="http://mumstudents.org/~984641/Lab11/Lab11-1.html">W4D4 Parser Jason Ajax</a> </li>
-			<li><a class="popup" href="http://mumstudents.org/~984641/FinalProject/index.php">Final Project</a> </li>-->
+			<li><a class="popup" href="https://roechever.github.io/BankAccount/account.html">W2D1 Bank Account JS closure</a> </li>
+			
 		</ul>
 		
 		<a href="https://validator.w3.org/check/referer">
