--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
 			<li><a class="popup" href="https://roechever.github.io/Lab6/decoratemytext.html">W1D6 Decorator</a> </li>
 			<li><a class="popup" href="https://roechever.github.io/HW8/ascii.html">W1D6 Ascii Animations</a> </li>
 			<li><a class="popup" href="https://roechever.github.io/BankAccount/account.html">W2D1 Bank Account JS closure</a> </li>
-			
+			<li><a class="popup" href="https://roechever.github.io/Lab8/lab8index.html">W2D3 Lab 8- JS</a> </li>
+			<li><a class="popup" href="https://roechever.github.io/HW9/maze.html">W2D5 Maze JS</a> </li>
+			<li><a class="popup" href="https://roechever.github.io/puzzlegame/fifteen.html">W2D6 Puzzle JS</a> </li>
 		</ul>
 		
 		<a href="https://validator.w3.org/check/referer">
 		<img src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png" alt="html validator"/>
 		</a>
-	</body>
+		
+		
 </html>
 
