labs late - correct maze

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<li><a class="popup" href="https://roechever.github.io/HW8/ascii.html">W1D6 Ascii Animations</a> </li>
 			<li><a class="popup" href="https://roechever.github.io/BankAccount/account.html">W2D1 Bank Account JS closure</a> </li>
 			<li><a class="popup" href="https://roechever.github.io/Lab8/lab8index.html">W2D3 Lab 8- JS</a> </li>
-			<li><a class="popup" href="https://roechever.github.io/HW9/maze.html">W2D5 Maze JS</a> </li>
+			<li><a class="popup" href="https://roechever.github.io/HW9/Maze!.html">W2D5 Maze JS</a> </li>
 			<li><a class="popup" href="https://roechever.github.io/puzzlegame/fifteen.html">W2D6 Puzzle JS</a> </li>
 		</ul>
 		
